fix: getting rid or scrollbar on map page

--- a/src/main/webapp/app/maps/results-list/results-list.component.scss
+++ b/src/main/webapp/app/maps/results-list/results-list.component.scss
@@ -1,6 +1,5 @@
 #results-list {
-  padding-top: 10px;
-  height: calc(100vh - 160px);
+  height: calc(100vh - 170px);
   width: 300px;
   overflow-y: auto;
 }
